[package]
name="resy-booking-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
url = "2.5"
chrono = "0.4"
rand = "0.8.5"

[dev-dependencies]
dotenv = "0.15"